{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 10,
  "lineage": "43bede64-b897-98e2-88c3-b3ff8fe5e823",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "nginx-app-firewall",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-07-04T13:40:57.400-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "nginx-app-firewall",
            "name": "nginx-app-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-testing-1/global/networks/terraform-network",
            "priority": 1000,
            "project": "terraform-testing-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-testing-1/global/firewalls/nginx-app-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "terraform-default-ssh-firewall",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-07-04T13:40:57.392-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "terraform-default-ssh-firewall",
            "name": "terraform-default-ssh-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-testing-1/global/networks/terraform-network",
            "priority": 1000,
            "project": "terraform-testing-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-testing-1/global/firewalls/terraform-default-ssh-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20190618",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-testing-1/zones/us-central1-c/disks/terraform-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "terraform-instance",
            "instance_id": "1517797159208213173",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "cdmS3WLoals=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install nginx -y; sudo apt-get install openssl; mkdir ssl-certs; cd ssl-certs; openssl genrsa -out example.key 2048; openssl rsa -in example.key -out example.key; openssl req -new -key example.key -out example.csr; openssl x509 -req -days 365 -in example.csr -signkey example.key -out example.crt -subj \"/C=US/ST=Georgia/L=Atlanta/O=None/OU=None/CN=example.com\"; ",
            "name": "terraform-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.224.109.170",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-testing-1/global/networks/terraform-network",
                "network_ip": "10.128.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-testing-1/regions/us-central1/subnetworks/terraform-network",
                "subnetwork_project": "terraform-testing-1"
              }
            ],
            "project": "terraform-testing-1",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-testing-1/zones/us-central1-c/instances/terraform-instance",
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-central1-c"
          },
          "depends_on": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "terraform-network",
            "name": "terraform-network",
            "project": "terraform-testing-1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-testing-1/global/networks/terraform-network"
          }
        }
      ]
    }
  ]
}